curses: Fix calculation of columns for CJK text.

* pinentry/pinentry-curses.c (STRWIDTH): New.
(collect_line): Let return value for columns width.
LEN minus one.
(dialog_create): Calculate for the columns with STRWIDTH.

GnuPG-bug-id: 4598
Signed-off-by: NIIBE Yutaka <gniibe@fsij.org>