pinentry/pinentry-curses.c
@@ -115,6 +115,7 @@ typedef struct dialog *dialog_t;
 #ifdef HAVE_NCURSESW
 typedef wchar_t CH;
 #define STRLEN(x) wcslen (x)
+#define STRWIDTH(x) wcswidth (x, wcslen (x))
 #define ADDCH(x) addnwstr (&x, 1);
 #define CHWIDTH(x) wcwidth (x)
 #define NULLCH L'\0'
@@ -123,6 +124,7 @@ typedef wchar_t CH;
 #else
 typedef char CH;
 #define STRLEN(x) strlen (x)
+#define STRWIDTH(x) strlen (x)
 #define ADDCH(x) addch ((unsigned char) x)
 #define CHWIDTH(x) 1
 #define NULLCH '\0'
@@ -130,13 +132,14 @@ typedef char CH;
 #define SPCH ' '
 #endif
 
-/* Return the next line up to MAXLEN columns wide in START and LEN.
+/* Return the next line up to MAXWIDTH columns wide in START and LEN.
+   Return value is the width needed (columns+1) of the line.
    The first invocation should have 0 as *LEN.  If the line ends with
    a \n, it is a normal line that will be continued.  If it is a '\0'
    the end of the text is reached after this line.  In all other cases
    there is a forced line break.  A full line is returned and will be
    continued in the next line.  */
-static void
+static int
 collect_line (int maxwidth, CH **start_p, int *len_p)
 {
   int last_space = 0;
@@ -170,7 +173,8 @@ collect_line (int maxwidth, CH **start_p, int *len_p)
       len = last_space;
       (*start_p)[len] = NLCH;
     }
-  *len_p = len + 1;
+  *len_p = len;
+  return width + 1;
 }
 
 #ifdef HAVE_NCURSESW
@@ -342,12 +346,13 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
 
       do
 	{
-	  collect_line (size_x - 4, &start, &len);
-	  if (len > description_x)
-	    description_x = len;
+	  int width = collect_line (size_x - 4, &start, &len);
+
+	  if (width > description_x)
+	    description_x = width;
 	  y++;
 	}
-      while (start[len - 1]);
+      while (start[len]);
       y++;
     }
 
@@ -414,7 +419,7 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
       new_x = MIN_PINENTRY_LENGTH;
       if (prompt)
 	{
-	  new_x += STRLEN (prompt) + 1;	/* One space after prompt.  */
+	  new_x += STRWIDTH (prompt) + 1;	/* One space after prompt.  */
 	}
       if (new_x > size_x - 4)
 	new_x = size_x - 4;
@@ -476,15 +481,15 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
 	  addch (ACS_VLINE);
 	  addch (' ');
 	  collect_line (size_x - 4, &start, &len);
-	  for (i = 0; i < len - 1; i++)
+	  for (i = 0; i < len; i++)
 	    {
 	      ADDCH (start[i]);
 	    }
-	  if (start[len - 1] != NULLCH && start[len - 1] != NLCH)
-	    ADDCH (start[len - 1]);
+	  if (start[len] != NULLCH && start[len] != NLCH)
+	    ADDCH (start[len]);
 	  ypos++;
 	}
-      while (start[len - 1]);
+      while (start[len]);
       move (ypos, xpos);
       addch (ACS_VLINE);
       ypos++;
@@ -543,11 +548,12 @@ dialog_create (pinentry_t pinentry, dialog_t dialog)
       if (prompt)
 	{
 	  CH *p = prompt;
-	  i = STRLEN (prompt);
+	  i = STRWIDTH (prompt);
 	  if (i > x - 4 - MIN_PINENTRY_LENGTH)
 	    i = x - 4 - MIN_PINENTRY_LENGTH;
 	  dialog->pin_x += i + 1;
 	  dialog->pin_size -= i + 1;
+	  i = STRLEN (prompt);
 	  while (i-- > 0)
 	    {
 	      ADDCH (*(p++));
